--- a/complaint.html
+++ b/complaint.html
@@ -63,7 +63,9 @@
             <input type="text" id="studentName" placeholder="Your Full Name *" required>
             <select id="department" required>
                 <option value="">Select Department *</option>
+                <option value = "Information Technology"> Information Technology </option>
                 <option value="Computer Science">Computer Science</option>
+                <option> Information Technology </option>
                 <option value="Electronics">Electronics</option>
                 <option value="Mechanical">Mechanical</option>
                 <option value="Civil">Civil</option>
